Giao tiếp giữa Notification và Foreground Service thông qua BroadcastReceiver

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
         <service android:name=".MyService"/>
+        <receiver android:name=".MyBroadcastReceiver"/>
     </application>
 
 </manifest>
